# Security-Tax

./: .env  .env.example  .gitignore  COMPLETION_SUMMARY.md  README.md  README_old.md  pyproject.toml  requirements.txt  安全疫苗设计.md  实现计划.md  目录结构.txt
configs/: defense_matrix.yaml  experiments.yaml  llm.yaml  llm_qwen.yaml  sim.yaml
data/attacks/: jailbreak_prompts.jsonl
data/harmless/: weird_but_safe.jsonl
data/tasks/: lab_task_mof.json
data/vaccines/: active.jsonl  passive.jsonl
docs/: README-cn.md  README.md
docs/CN/: README-cn.md  README.md
docs/EN/: README.md
docs/design/: 安全疫苗 业务逻辑图.html
docs/guides/: QUICKSTART.md  QWEN_GUIDE.md
docs/references/: IMPLEMENTATION_COMPLETE.md
scripts/: README_VISUALIZATION.md  run_batch.py  run_one.py  test_qwen.py  visualize_flow.py  visualize_flow_legacy.py  visualize_results.py
scripts/visualization/: __init__.py  data_loader.py  html_generator.py  network_builder.py  timeline_builder.py  translations.py
src/: __init__.py  app.py
src/agents/: __init__.py
src/attacks/: __init__.py  injector.py  prompt_bank.py  schedule.py  target_selection.py
src/common/: __init__.py  constants.py  logging.py  types.py  utils.py
src/defenses/: __init__.py
src/eval/: __init__.py
src/evaluation/: __init__.py  cooperation.py  propagation.py  report.py  robustness.py  visualize.py
src/llm/: __init__.py  factory.py  prompts.py
src/orchestrator/: __init__.py  injection_points.py  lifecycle.py  (+2 more)
tests/: test_basic.py  test_comprehensive.py
论文/: .gitignore  README.md  STRUCTURE.md  论文初稿_中文.tex  论文撰写总结.md
(+76 files in other folders)
